# grids

./: .gitignore  ANKOS.md  ARCHITECTURE.md  Cargo.toml  README.md
docs/build-diary/: calling-cards.md
docs/specs/: calling-cards-v2.md
domains/: agency-mix.yaml  creative-production.yaml  culture-crit.yaml  dataviz.yaml  dating-advice.yaml  design.yaml  dieter-rams.yaml  editorial.yaml  gen-z-trend-expert.yaml  ocd-ux-nerd.yaml  production-tech.yaml  trend-reporter.yaml
libs/layout/: Cargo.toml
libs/layout/src/: grid.rs  lib.rs  page.rs  provenance.rs  render.rs
scripts/: pyproject.toml
scripts/src/grids/: bridge.py  domain_colors.py
scripts/src/grids/analysis/: cli.py  narrative.py  report.py  retrospective.py  stream_parser.py  viz_builder.py  workflow.py
scripts/src/grids/book/: finder.py
scripts/src/grids/comms/: struggle.py
scripts/src/grids/domain/: cli.py  config.py  master.py  multi.py  research.py  sub_agent.py  validation.py  work_orders.py
scripts/src/grids/eval/: cli.py  scorer.py
scripts/src/grids/execution/: cli.py  coder.py  runner.py  tester.py
scripts/src/grids/image/: extract.py  gm.py  svg_tools.py  trace.py
scripts/src/grids/knowledge/: concepts.py  embeddings.py  scrape_substack.py  store.py
scripts/src/grids/memory/: recall.py  session_memory.py
scripts/src/grids/meta/: refine.py  reflections.py
scripts/src/grids/moodboard/: board.py  iterate.py  research.py
scripts/src/grids/orchestration/: agent_wrapper.py  agents.py  flow.py  graph.py  grid.py  invoke.py  recorder.py  rule_search.py  rules.py  run.py  seed.py  session.py  tick.py  tui.py  validate.py  validate_cli.py
scripts/src/grids/pdf/: chunk.py  extract.py  figures.py  ocr.py  profile.py  render.py  structure.py
scripts/src/grids/provenance/: tracker.py
scripts/src/grids/seed/: reference.py
scripts/src/grids/skills/: registry.py  sharpen.py
scripts/src/grids/typeset/: cli.py  engine.py  idml.py  impose.py
scripts/src/grids/visual/: capture.py  cli.py  critique.py  loop.py
seeds/: calling-cards.yaml  love-line.yaml
tui/intake/: Cargo.toml
tui/intake/src/: main.rs  project.rs  ui.rs  wizard.rs
tui/viewer/: Cargo.toml
tui/viewer/src/: main.rs
