[package]
name = "grids-intake"
version = "0.1.0"
edition = "2021"
description = "ANKOS intake briefing wizard -- structured project onboarding TUI"

[[bin]]
name = "grids-intake"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
chrono = "0.4"
